tests/Core/negative/parsing/test006.jvc
def f : Int -> Int;

def f : Int := 0;
